# WinAirPlay

./: .gitignore  README.md  build.py  capture.py  discovery.py  i18n.py  main.py  pyproject.toml  raop.py  requirements.txt  ui.py
src/winairplay/: __init__.py  __main__.py  app.py  capture.py  config.py  discovery.py  i18n.py  raop.py  resources.py  ui.py
tests/: test_capture.py  test_config.py  test_discovery.py  test_main.py  test_raop.py
